Add Epic, Feature and log models
